--- a/2019年度考试录用公务员工作开始.md
+++ b/2019年度考试录用公务员工作开始.md
@@ -1,6 +1,6 @@
 # 2019年度考试录用公务员工作开始
 
-## 时间
+## 1.时间
 
 考生报名主要采取网络报名的方式
 
@@ -16,6 +16,21 @@
 中央机关及其直属机构[2019年度考试录用公务员专题网站](http://bm.scs.gov.cn/kl2019)（http://bm.scs.gov.cn/kl2019）
 
 查询招考公告、招考职位、报考指南、考试大纲、政策法规等信息。
+
+
+## 2.咨询
+
+政策咨询电话  
+010-12370  
+2018年10月22日~11月2日 (每日8:00-20:00)
+
+技术咨询电话  
+010-12370  
+2018年10月22日~11月2日(每日8:00-20:00)
+
+考务咨询电话  
+010-64401192, 010-64401193, 010-86484037  
+2018年11月3日~12月2日(每日8:30-17:00)  
 
 ## 参考
 - [2019年度考试录用公务员工作开始 计划招录1.45万人](https://mp.weixin.qq.com/s/Ef_83TQRAC0QVTxu1lV9dg)
