--- a/2019年度考试录用公务员工作开始.md
+++ b/2019年度考试录用公务员工作开始.md
@@ -8,6 +8,7 @@
 
 公共科目笔试定于2018年12月2日在全国各省会城市、自治区首府、直辖市和个别较大的城市同时举行。
 
+- [考生登录](http://bm.scs.gov.cn/pp/gkweb/core/web/ui/business/auth/login.html)
 
 2018年10月21日以后，
 
@@ -31,6 +32,14 @@
 考务咨询电话  
 010-64401192, 010-64401193, 010-86484037  
 2018年11月3日~12月2日(每日8:30-17:00)  
+
+
+
+## 中央机关及其直属机构2019年度考试录用公务员报考指南
+
+通过资格审查的报考人员可在2018年11月4日8:00后凭本人身份证号和注册密码登录考录专题网站查询自己的报名序号。
+
+- [中央机关及其直属机构2019年度考试录用公务员报考指南](http://bm.scs.gov.cn/pp/gkweb/core/web/ui/business/article/articledetail.html?ArticleId=8a81f323668b1a6c016690992aa40079&id=0000000062b7b2b60162bccd55ec0006&eid=0000000062b7b2b60162bccdd5860007)
 
 ## 参考
 - [2019年度考试录用公务员工作开始 计划招录1.45万人](https://mp.weixin.qq.com/s/Ef_83TQRAC0QVTxu1lV9dg)
