--- a/2019年度考试录用公务员工作开始.md
+++ b/2019年度考试录用公务员工作开始.md
@@ -18,6 +18,10 @@
 
 查询招考公告、招考职位、报考指南、考试大纲、政策法规等信息。
 
+面试具体时间由招录机关确定，一般在2019年2月下旬至3月下旬进行。
+
+考生可登录考录专题网站或招录机关网站查询招录机关面试公告，也可直接向招录机关电话咨询
+
 
 ## 2.咨询
 
@@ -40,6 +44,49 @@
 通过资格审查的报考人员可在2018年11月4日8:00后凭本人身份证号和注册密码登录考录专题网站查询自己的报名序号。
 
 - [中央机关及其直属机构2019年度考试录用公务员报考指南](http://bm.scs.gov.cn/pp/gkweb/core/web/ui/business/article/articledetail.html?ArticleId=8a81f323668b1a6c016690992aa40079&id=0000000062b7b2b60162bccd55ec0006&eid=0000000062b7b2b60162bccdd5860007)
+
+2. 综合成绩如何计算？
+
+一般职位综合成绩的计算方法为：公共科目笔试、面试成绩各占50％，进行专业能力测试的，面试成绩和专业能力测试成绩共占50％，
+
+公共科目笔试、面试、专业能力测试成绩均按百分制折算。专业能力测试成绩一般不超过综合成绩的15%，具体各职位所占分值比重见《招考简章》。
+
+
+六、如何打印准考证？
+
+>完成报名确认后，报考人员应在2018年11月26日0:00至12月2日12：00期间登录考录专题网站，选择“考生考务入口”（或报名确认及准考证打印网址）进入，通过报名序号和身份证号登录报名确认及准考证打印系统。仔细阅读《准考证打印须知》，阅读完毕后，勾选“我已阅知并同意”，点击“下一步”按钮，跳转至省（自治区、直辖市）《准考证打印注意事项》，阅读完毕后，勾选“我已阅知并同意”，点击“下一步”按钮，显示报考人员的准考证信息，点击“打印”按钮，即可完成准考证打印。打印中如遇问题请与当地考试机构联系解决。
+
+七、笔试时要注意哪些事项？
+
+1. 必须带齐准考证、本人有效居民身份证，方可进入考场。进入考场时要服从工作人员的安排。
+
+九、如何查询笔试成绩？
+
+2019年1月中下旬，报考人员可通过身份证号和准考证号在考录专题网站上查询自己的笔试成绩。
+
+十、如何获得笔试成绩单？
+
+本次考试不下发考试成绩单。报考人员确实需要的，可在2019年2月28日前向当地省级考试机构申请，由当地省级考试机构负责出具成绩证明。
+
+ 
+
+各省（自治区、直辖市）考试机构咨询电话：2018年11月7日以后通过考录专题网站公布。
+
+咨询时间：2018年11月7日至12月2日，工作日8:30－17:00
+
+ 
+
+报名确认及准考证打印技术咨询电话：0531－66680723、66680726，010-86484036
+
+咨询时间：2018年11月7日至11月14日，每日8:00－20:00；
+
+11月25日至12月2日，每日8:00－20:00
+
+ 
+
+考务咨询电话：010－64401192、64401193、86484037
+
+咨询时间：2018年11月3日至12月2日，工作日8:30－17:00
 
 ## 参考
 - [2019年度考试录用公务员工作开始 计划招录1.45万人](https://mp.weixin.qq.com/s/Ef_83TQRAC0QVTxu1lV9dg)
